fix distorted image

--- a/sass/components/_partners.scss
+++ b/sass/components/_partners.scss
@@ -31,6 +31,7 @@
 
   img {
     max-height: 9rem;
+    width: auto;
     text-align: center;
     margin: 0 auto;
     padding: 1rem;
